--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,6 @@
 tasks:
+    - name: Seed bashrc
+      init: echo "echo \"hello\"" >> ~/.bashrc
     - name: Launch VNC Image
       init: docker pull braughtg/vnc-novnc-base:1.2.1
       command: |
