--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 tasks:
     - name: Seed bashrc
-      command: echo "./startup.bash" >> ~/.profile
+      before: echo "./startup.bash" >> ~/.bashrc
     - name: Launch VNC Image
       init: docker pull braughtg/vnc-novnc-base:1.2.1
       command: |
