--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,8 @@
 tasks:
     - name: Test
-      before: echo "./startup.bash" >> ~/.bash-aliases
+      before: |
+          cp "./startup.bash" ~/.bash-aliases
+          chmod 755 ~/.bash-aliases
     - name: Launch VNC Image
       init: docker pull braughtg/vnc-novnc-base:1.2.1
       command: |
