--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,7 @@
 tasks:
     - name: Launch VNC Image
       init: docker pull braughtg/vnc-novnc-base:1.2.1
-      before: |
-          cp "./startup.bash" ~/.bash-aliases
-          chmod 755 ~/.bash-aliases
+      before: echo "./startup.bash" >> ~/.bash_profile
       command: |
           docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1
           docker start vnc
