--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,6 @@ tasks:
     - name: Launch VNC Image
       init: docker pull braughtg/vnc-novnc-base:1.2.1
       command: |
-          sh -c docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1
-          sh -c docker start vnc
+          sh -c "docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1"
+          sh -c "docker start vnc"
           
