--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ image:
     file: .gitpod.Dockerfile
 tasks:
     - name: Launch VNC Image
-      init: docker pull braughtg/vnc-novnc-base:1.2.1
+      init: sh -c "docker pull braughtg/vnc-novnc-base:1.2.1"
       command: |
           sh -c "docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1"
           sh -c "docker start vnc"
