--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,11 @@
-image:
-    file: .gitpod.Dockerfile
+
 tasks:
     - name: Launch VNC Image
-      init: sh -c "docker pull braughtg/vnc-novnc-base:1.2.1"
+      init: docker pull braughtg/vnc-novnc-base:1.2.1
       command: |
-          sh -c "docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1"
-          sh -c "docker start vnc"
-          
+          docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1
+          docker start vnc
+    - name: Wait for VNC
+      before: ./startup.bash
+      command: gp task attach
+      
