--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,6 @@ tasks:
           docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1
           docker start vnc
     - name: Wait for VNC
-      before: ./startup.bash
-      command: gp task attach
-      
+      command: |
+        gp tasks attach
+        ./startup.bash
