--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,5 @@
 image:
     file: .gitpod.Dockerfile
 tasks:
-    - name: Launch VNC Image
+    - name: Pull VNC Image
       init: docker pull braughtg/vnc-novnc-base:1.2.1
-      command: |
-          export RUN_STARTUP=1
-          docker create --name vnc --publish 5901:5901 --publish 6901:6901 braughtg/vnc-novnc-base:1.2.1
-          docker start vnc
